# PartycjePudelka

./: README.md  index.html  solver-worker.js  start-linux.sh  start-windows-easy.bat  style.css
cpp/: CMakeLists.txt
cpp/src/: MainWindow.cpp  MainWindow.h  PartitionSolver.cpp  PartitionSolver.h  RenderWidget.h
repo-cpp/: README.md  start-linux.sh  start-windows-easy.bat  start-windows.bat
repo-cpp/src/: MainWindow.cpp  Model.h  RenderWidget.cpp  main.cpp
repo-web/: README.md  app.js  index.html  start-windows.bat
repo-web/specyfikacja/: opis.txt
